--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,13 @@ Django==2.2.4
 django-countries==5.3.3
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
+django-model-utils==3.2.0
+django-notifications-hq==1.5.0
 django-storages==1.7.1
 docutils==0.14
 gunicorn==19.9.0
 jmespath==0.9.4
+jsonfield==2.0.2
 Pillow==6.1.0
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
