--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 boto3==1.9.198
 botocore==1.12.198
 dj-database-url==0.5.0
-Django==2.2.4
+django==2.2.10
 django-countries==5.3.3
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
@@ -12,7 +12,7 @@ docutils==0.14
 gunicorn==19.9.0
 jmespath==0.9.4
 jsonfield==2.0.2
-Pillow==6.1.0
+pillow>=6.2.0
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
 python-dateutil==2.8.0
